--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,19 +1,24 @@
 :root {
-    --horizotal-padding: 8vw;
-    --vertical-padding: 1vh;
-    --hover-color: #EEEEEE;
-    --border-color: #EEEEEE;
-    --default-border: 2px solid var(--border-color);
+  --horizotal-padding: 8vw;
+  --vertical-padding: 1vh;
+  --hover-color: #eeeeee;
+  --border-color: #eeeeee;
+  --default-border: 2px solid var(--border-color);
 }
 
-a:where(.css-dev-only-do-not-override-gzal6t).ant-typography, :where(.css-dev-only-do-not-override-gzal6t).ant-typography a {
-    color: black;
+a:where(.css-dev-only-do-not-override-gzal6t).ant-typography,
+:where(.css-dev-only-do-not-override-gzal6t).ant-typography a {
+  color: black;
 }
 
-a:where(.css-dev-only-do-not-override-gzal6t).ant-typography:focus, :where(.css-dev-only-do-not-override-gzal6t).ant-typography a:focus, a:where(.css-dev-only-do-not-override-gzal6t).ant-typography:hover, :where(.css-dev-only-do-not-override-gzal6t).ant-typography a:hover {    color: black;
-    text-decoration: underline;
+a:where(.css-dev-only-do-not-override-gzal6t).ant-typography:focus,
+:where(.css-dev-only-do-not-override-gzal6t).ant-typography a:focus,
+a:where(.css-dev-only-do-not-override-gzal6t).ant-typography:hover,
+:where(.css-dev-only-do-not-override-gzal6t).ant-typography a:hover {
+  color: black;
+  text-decoration: underline;
 }
 
 :where(.css-dev-only-do-not-override-gzal6t).ant-btn {
-    border-radius: 0;
+  border-radius: 0;
 }
