--- a/src/assets/styles/typography.scss
+++ b/src/assets/styles/typography.scss
@@ -106,3 +106,23 @@
   letter-spacing: 0px;
   text-align: left;
 }
+
+.caption2-Semi-bold {
+  //styleName: Text/Caption-2/Semi-bold;
+  font-family: Open Sans;
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 16px;
+  letter-spacing: 0px;
+  text-align: center;
+}
+
+.h5-semi-bold {
+  //styleName: Text/H5/Semi-bold;
+  font-family: "Open Sans";
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: left;
+}
