--- a/src/components/icon/BaseIcon.module.css
+++ b/src/components/icon/BaseIcon.module.css
@@ -1,20 +1,20 @@
 .container {
-    border: none;
-    padding: 0;
-    background: none;
+  border: none;
+  padding: 0;
+  background: none;
 }
 
 .clickableContainer {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.clickableContainer :hover{
-    cursor: pointer;
-    background: #EEEEEE;
+.clickableContainer :hover {
+  cursor: pointer;
+  background: #eeeeee;
 }
 
 .icon {
-    padding: 4px;
-    border-radius: 4px;
-    scale: 0.9;
+  padding: 4px;
+  border-radius: 4px;
+  scale: 0.9;
 }
