implement dasshboard page and orders

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -15,4 +15,6 @@
   --error-color-10: #ff00001a;
 
   --text-dark: #626264;
+  --default-button-background: #f7f7f7;
+  --default-icon-color: #a3a3a4;
 }
