--- a/src/assets/styles/typography.scss
+++ b/src/assets/styles/typography.scss
@@ -126,3 +126,13 @@
   letter-spacing: 0px;
   text-align: left;
 }
+
+.h4-semi-bold {
+  //styleName: Text/H4/Semi-bold;
+  font-family: "Open Sans";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: center;
+}
