--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,12 @@
   font-weight: 400;
   font-style: normal;
 }
-
+@font-face {
+  font-family: "Open Sans";
+  src: url("./assets/font/OpenSans-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
 * {
   font-family: "Open Sans", sans-serif;
 }
