--- a/src/components/home/content/UpComingOrderCard.module.css
+++ b/src/components/home/content/UpComingOrderCard.module.css
@@ -53,3 +53,60 @@
   margin: 0;
   text-align: center;
 }
+
+.drawer {
+  display: flex;
+  flex-direction: column;
+  border-radius: 24px 0px 0px 24px;
+  background-color: #ffffff;
+  padding: 0;
+}
+
+.mapImg {
+  margin: 0;
+  height: 400px;
+  width: 400px;
+  border-radius: 24px, 0px, 0px, 0px;
+}
+
+.drawerCol {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.drawerRow {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding-top: 32px;
+  padding-left: 32px;
+  padding-right: 32px;
+  margin: 0;
+}
+
+.drawerRow2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
+.drawerCol2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 32px;
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
+.drawerRow3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 32px;
+}
