--- a/src/components/restaurant/Banner.module.css
+++ b/src/components/restaurant/Banner.module.css
@@ -19,13 +19,14 @@
   bottom: -16%;
 }
 
-.likeIcon {
+.heartIcon {
   position: absolute;
   top: 32px;
   right: 32px;
-  margin: 8px;
   background-color: #ffffff;
   border-radius: 12px;
   width: 48px;
   height: 48px;
+  padding: 4px;
+  justify-content: center;
 }
