--- a/src/assets/styles/typography.scss
+++ b/src/assets/styles/typography.scss
@@ -109,7 +109,7 @@
 
 .caption2-Semi-bold {
   //styleName: Text/Caption-2/Semi-bold;
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-size: 11px;
   font-weight: 600;
   line-height: 16px;
